# qualitative_analysis_project

./: .env.example  .gitignore  .pre-commit-config.yaml  AG_news.ipynb  GAMEPLAY_MODE_GUIDE.md  GENERATION_MODE_GUIDE.md  README.md  app.py  app_local.py  codebook.txt  exploraty_analysis.ipynb  manual_annotator.py  manual_annotator_stream.py  prompt_experiment_results.csv  pyproject.toml  requirements.txt  run_app.py  test_iterative_functionality.py
.devcontainer/: devcontainer.json
codebook/: binary_codebook.txt  multiclass_codebook.txt
data/: Exo_test.csv  KidsReflect_3anno.csv  KidsReflect_full.csv  binary_sample.csv  multiclass_KA.csv  multiclass_MC.csv  multiclass_sample.csv  multiclass_sample_chem.csv  multiclass_sample_split.csv  sequential_binary_sample.csv
manual_annotator/: __init__.py  annotation_filter.py  annotator_setup.py  app_core.py  codebook_upload.py  column_selection.py  data_download.py  data_upload.py  label_definition.py  row_annotation.py
notebooks/: SQUAD.ipynb  binary_case_colab.ipynb  complex_case_colab.ipynb  general_notebook.ipynb  kr_vllm_notebook.ipynb  multiclass_case_colab.ipynb  notebook_binary.ipynb  notebook_binary_colab.ipynb  notebook_binary_old.ipynb  notebook_multiclass.ipynb  notebook_multiclass_colab.ipynb  notebook_multiclass_simple.ipynb  notebook_sequential_binary.ipynb  notebook_sequential_binary_colab.ipynb  notebook_sequential_binary_collab.ipynb
qualitative_analysis/: __init__.py  alt_test.py  annotations.py  config.py  cost_estimation.py  data_processing.py  evaluation.py  logging.py  model_interaction.py  (+7 more)
(+57 files in other folders)
